befa2b19820da7401dbf672069d4af99a040c200/css/projects.css
#parent_container {
    display: flex;
    width: 70%;
}

.child_container {
    flex: 1;
    margin: 10px;
}


#cover_container {
    display: flex;
    flex-direction: column;
    flex: 2.5 !important;
}

.covers {
    position: relative;
    display: flex;
    justify-content: center;
    margin: 10px;
    background-color: white;
}

.covers:hover {
    transform: scale(1.5);
    z-index: 1;
}

.covers:hover .desc{
    display: none;
}

.cover_img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    outline: 1px solid rgba(146, 145, 150, 0.75);
}

#pdf_cover:hover  {
    transform: none; 
}

#pdf {
    height: 25vw;
    object-fit: cover;
}

.desc {
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 30px;
    background-color: rgba(146, 145, 150, 0.85);
    color: white;
    font-size: 11px;
}

#about_container {
    position: sticky;
    display: flex;
    flex-direction: column;
    top: 20px;
    margin-top: 20px;
    height: min-content;
    background-color: rgb(150, 145, 145, 0.25);
    outline: 1px solid rgba(146, 145, 150, 0.75);
}

.about_text {
    text-transform: none;
    margin: 20px;
    font-size: 15px;
}

#about_title {
    text-decoration: underline;
    text-transform: uppercase;
}

#about_details {
    text-transform: none;
    margin-top: -10px;
}

/* contact page css below*/
#about_me {
    min-height: 800px;
    line-height: 20px;
    margin: 20px;
    flex: 2;
    background-color: rgb(150, 145, 145, 0.25);
    outline: 1px solid rgba(146, 145, 150, 0.75);
}

#bullets {
    padding-left: 20px;
}

#email_form {
    display: flex;
    flex-direction: column;
    margin-top: 20px;
}

.form_row {
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin-bottom: 20px;
}

#message {
    height: 100px;
}

h2 {
    padding-bottom: 10px;
}

input, button {
    height: 30px;
}

